yaml/filerun/filerun-external/filerun-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filerun
  labels:
    app: filerun
spec:
  type: NodePort
  selector:
    app: filerun
  ports:
    - name: filerun
      protocol: TCP
      port: 80
